--- a/.tigrc
+++ b/.tigrc
@@ -16,4 +16,5 @@ bind generic <Ctrl-F> move-page-down
 bind generic <Ctrl-B> move-page-up
 
 # チェックアウト
-bind refs n ?git checkout -b "%(prompt Enter new branch name: )" %(branch)
+bind generic F      ?git fetch %(remote)
+bind refs    B      ?git checkout -b "%(prompt Enter branch name: )" %(remote)/%(branch)
